Activities pet loves

--- a/my-pet-website/my-pet-website.html
+++ b/my-pet-website/my-pet-website.html
@@ -4,13 +4,21 @@
   <head>
     <meta charset="utf-8">
     <title>My cat</title>
+    <h1>MY PET</h1>
     <p>My cat's name is Alexis</p>
     <p>Alexis loves the following toys</p>
     <ul>
       <li>plastic car</li>
-          <li>rubber ball</li>
-              <li>plastic bottle</li>
+      <li>rubber ball</li>
+      <li>plastic bottle</li>
     </ul>
+    <p>My cat loves to:</p>
+    <ol>
+      <li>eat omena</li>
+      <li>play with other cats</li>
+      <li>play with it's toys</li>
+      <li>drink milk</li>
+    </ol>
   </head>
   <body>
 
